--- a/test/bioblend/Dockerfile
+++ b/test/bioblend/Dockerfile
@@ -1,24 +1,25 @@
-FROM quay.io/bgruening/galaxy
+FROM alpine:3.17 as build
 
-USER galaxy
-WORKDIR /home/galaxy
-
-ENV TOX_ENV=py37 \
+ENV BIOBLEND_VERSION=1.3.0 \
+    TOX_ENV=py310 \
     BIOBLEND_GALAXY_API_KEY=fakekey \
     BIOBLEND_GALAXY_URL=http://galaxy \
     BIOBLEND_TEST_JOB_TIMEOUT="240" \
-    GALAXY_VERSION=release_20.05
+    GALAXY_VERSION=release_24.1
 
-RUN mkdir bioblend-master \
-    && curl -L -s https://github.com/galaxyproject/bioblend/archive/master.tar.gz | tar xzf - --strip-components=1 -C bioblend-master \
-    && cd bioblend-master \
-    && export PATH=/tool_deps/_conda/bin/:$PATH && . activate galaxy_env \
-    && pip install --upgrade "tox>=1.8.0" "pep8<=1.6.2" \
-    && python setup.py install \
-    && sed -i.bak "s/commands.*$/commands =/" tox.ini \
-    && sed -i.bak2 "s/GALAXY_VERSION/GALAXY_VERSION BIOBLEND_TEST_JOB_TIMEOUT/" tox.ini
+ADD "https://github.com/galaxyproject/bioblend/archive/v$BIOBLEND_VERSION.zip" /src/bioblend.zip
+RUN apk update && apk add curl python3-dev unzip \
+    && python3 -m ensurepip --upgrade \
+    && pip3 install pep8 tox "aiohttp==3.10.9" \
+    && cd /src \
+    && unzip bioblend.zip && rm bioblend.zip \
+    && mv "bioblend-$BIOBLEND_VERSION" bioblend \
+    && cd bioblend \
+    && python3 setup.py install
 
-CMD /bin/bash -c "export PATH=/tool_deps/_conda/bin/:$PATH && cd /home/galaxy/bioblend-master && tox -e $TOX_ENV -- -k 'not test_download_dataset and not test_upload_from_galaxy_filesystem and not test_get_datasets and not test_datasets_from_fs and not test_tool_dependency_install and not test_download_history and not test_export_and_download'"
+WORKDIR /src/bioblend
+
+CMD /bin/sh -c "tox -e $TOX_ENV -- -k 'not test_upload_from_galaxy_filesystem and not test_get_datasets and not test_datasets_from_fs and not test_cancel_invocation and not test_run_step_actions'"
 
 # library tests, needs share /tmp filesystem
 # * test_upload_from_galaxy_filesystem
