--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,18 +5,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
-    - name: Cleanup to only use compose
-      run: rm -R docs galaxy test
+      uses: actions/checkout@v4
+    # - name: Cleanup to only use compose
+    #   run: rm -R docs galaxy test
     - name: Run shellcheck with reviewdog
-      uses: reviewdog/action-shellcheck@v1.1.3
+      uses: reviewdog/action-shellcheck@v1.27.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         reporter: github-check
         level: warning
         pattern: "*.sh"
     - name: Run hadolint with reviewdog
-      uses: reviewdog/action-hadolint@v1.16.0
+      uses: reviewdog/action-hadolint@v1.46.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         reporter: github-check
