--- a/.github/workflows/single_container.yml
+++ b/.github/workflows/single_container.yml
@@ -1,15 +1,15 @@
 name: Single Container Test
-on: [push]
+on: [push, pull_request]
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: ['3.10']
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
-    - uses: actions/setup-python@v1
+      uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
     - name: Build and Test
