--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 sudo: required
 
 language: python
-python: 3.6
+python: 3.10
 
 services:
   - docker
 
 env:
   matrix:
-    - TOX_ENV=py36
+    - TOX_ENV=py310
   global:
     - secure: "SEjcKJQ0NGXdpFxFhLVlyJmiBvgiLtR5Uufg90Vm3owKlMy0NSfIrOR+2dwNniqOp7QI3eVepnqjid/Ka0QStzVqMCe55OLkJ/TbTHnMLpbtY63mpGfogVRvxMMAVpzLpcQqtJFORZmO/MIWSLlBiXMMzOg3+tbXvQXmL17Rbmw="
 
@@ -39,6 +39,7 @@ before_install:
 
   # start building this repo
   - git submodule update --init --recursive
+  - git submodule update --remote --rebase
   - sudo chown 1450 /tmp && sudo chmod a=rwx /tmp
   - export WORKING_DIR="$TRAVIS_BUILD_DIR"
   - export DOCKER_RUN_CONTAINER="quay.io/bgruening/galaxy"
@@ -68,8 +69,8 @@ before_install:
         --privileged=true \
         -v `pwd`/local_folder:/export/ \
         -e GALAXY_CONFIG_ALLOW_USER_DATASET_PURGE=True \
-        -e GALAXY_CONFIG_ALLOW_LIBRARY_PATH_PASTE=True \
-        -e GALAXY_CONFIG_ENABLE_USER_DELETION=True \
+        -e GALAXY_CONFIG_ALLOW_PATH_PASTE=True \
+        -e GALAXY_CONFIG_ALLOW_USER_DELETION=True \
         -e GALAXY_CONFIG_ENABLE_BETA_WORKFLOW_MODULES=True \
         -v /tmp/:/tmp/ \
         quay.io/bgruening/galaxy
@@ -101,7 +102,7 @@ script:
   # - cd $TRAVIS_BUILD_DIR/test/gridengine/ && bash test.sh && cd $WORKING_DIR
 
   - echo 'Waiting for Galaxy to come up.'
-  - galaxy-wait -g $BIOBLEND_GALAXY_URL --timeout 300
+  - galaxy-wait -g $BIOBLEND_GALAXY_URL --timeout 600
 
   - curl -v --fail $BIOBLEND_GALAXY_URL/api/version
 
@@ -140,7 +141,7 @@ script:
   #  then
   #      # Test without install-repository wrapper
   #      sleep 10
-  #      docker_exec_run bash -c 'cd $GALAXY_ROOT && python ./scripts/api/install_tool_shed_repositories.py --api admin -l http://localhost:80 --url https://toolshed.g2.bx.psu.edu -o devteam --name cut_columns --panel-section-name BEDTools'
+  #      docker_exec_run bash -c 'cd $GALAXY_ROOT_DIR && python ./scripts/api/install_tool_shed_repositories.py --api admin -l http://localhost:80 --url https://toolshed.g2.bx.psu.edu -o devteam --name cut_columns --panel-section-name BEDTools'
   #  fi
 
 
