--- a/.github/workflows/compose.yml
+++ b/.github/workflows/compose.yml
@@ -2,25 +2,25 @@ name: build-and-test
 on: [push]
 jobs:
   build_container_base:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Set image tag
         id: image_tag
         run: |
           if [ "${GITHUB_REF#refs/heads/}" = "master" ]; then
-            echo "::set-output name=image_tag::latest";
+            echo "image_tag=latest" >> $GITHUB_OUTPUT;
           else
-            echo "::set-output name=image_tag::${GITHUB_REF#refs/heads/}"
+            echo "image_tag=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT;
           fi
       - name: Docker Login
         run: echo "${{ secrets.docker_registry_password }}" | docker login -u ${{ secrets.docker_registry_username }} --password-stdin ${{ secrets.docker_registry }}
       - name: Set up Docker Buildx
         id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v1
+        uses: docker/setup-buildx-action@v3
         with:
-          buildx-version: v0.3.1
+          version: v0.17.1
       - name: Run Buildx
         env:
           image_name: galaxy-container-base
@@ -41,22 +41,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Set image tag
         id: image_tag
         run: |
           if [ "${GITHUB_REF#refs/heads/}" = "master" ]; then
-            echo "::set-output name=image_tag::latest";
+            echo "image_tag=latest" >> $GITHUB_OUTPUT;
           else
-            echo "::set-output name=image_tag::${GITHUB_REF#refs/heads/}"
+            echo "image_tag=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT;
           fi
       - name: Docker Login
         run: echo "${{ secrets.docker_registry_password }}" | docker login -u ${{ secrets.docker_registry_username }} --password-stdin ${{ secrets.docker_registry }}
       - name: Set up Docker Buildx
         id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v1
+        uses: docker/setup-buildx-action@v3
         with:
-          buildx-version: v0.3.1
+          version: v0.17.1
       - name: Run Buildx
         env:
           image_name: galaxy-cluster-base
@@ -95,22 +95,22 @@ jobs:
       fail-fast: false
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Set image tag
         id: image_tag
         run: |
           if [ "${GITHUB_REF#refs/heads/}" = "master" ]; then
-            echo "::set-output name=image_tag::latest";
+            echo "image_tag=latest" >> $GITHUB_OUTPUT;
           else
-            echo "::set-output name=image_tag::${GITHUB_REF#refs/heads/}"
+            echo "image_tag=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT;
           fi
       - name: Docker Login
         run: echo "${{ secrets.docker_registry_password }}" | docker login -u ${{ secrets.docker_registry_username }} --password-stdin ${{ secrets.docker_registry }}
       - name: Set up Docker Buildx
         id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v1
+        uses: docker/setup-buildx-action@v3
         with:
-          buildx-version: v0.3.1
+          version: v0.17.1
       - name: Run Buildx
         run: |
           for i in {1..4}; do
@@ -133,69 +133,43 @@ jobs:
         infrastructure:
           - name: galaxy-base
             files: -f docker-compose.yml
-            exclude_test:
-              - workflow_example1
           - name: galaxy-proxy-prefix
             files: -f docker-compose.yml
-            env: GALAXY_PROXY_PREFIX=/arbitrary_Galaxy-prefix GALAXY_CONFIG_GALAXY_INFRASTRUCTURE_URL=http://localhost/arbitrary_Galaxy-prefix
+            env: GALAXY_PROXY_PREFIX=/arbitrary_Galaxy-prefix GALAXY_CONFIG_GALAXY_INFRASTRUCTURE_URL=http://localhost/arbitrary_Galaxy-prefix EXTRA_SKIP_TESTS_BIOBLEND="not test_import_export_workflow_dict and not test_import_export_workflow_from_local_path"
             exclude_test:
-              - workflow_example1
+              - selenium
           - name: galaxy-htcondor
             files: -f docker-compose.yml -f docker-compose.htcondor.yml
-            exclude_test:
-              - workflow_example1
           - name: galaxy-slurm
             files: -f docker-compose.yml -f docker-compose.slurm.yml
             env: SLURM_NODE_COUNT=3
             options: --scale slurm_node=3
-            exclude_test:
-              - workflow_example1
           - name: galaxy-pulsar
             files: -f docker-compose.yml -f docker-compose.pulsar.yml
             exclude_test:
-              - workflow_example1
-              - workflow_mapping_by_sequencing
-          # - name: galaxy-pulsar-mq
-          #   files: -f docker-compose.yml -f docker-compose.pulsar.yml -f docker-compose.pulsar.mq.yml
-          #   exclude_test:
-          #     - workflow_example1
-          #     - workflow_mapping_by_sequencing
+              - workflow_quality_control
+            env: EXTRA_SKIP_TESTS_BIOBLEND="not test_wait_for_job"
+          - name: galaxy-pulsar-mq
+            files: -f docker-compose.yml -f docker-compose.pulsar.yml -f docker-compose.pulsar.mq.yml
+            exclude_test:
+              - workflow_quality_control
+            env: EXTRA_SKIP_TESTS_BIOBLEND="not test_wait_for_job"
           - name: galaxy-k8s
             files: -f docker-compose.yml -f docker-compose.k8s.yml
-            exclude_test:
-              - bioblend
-              - workflow_example1
-              - workflow_ard
-              - workflow_mapping_by_sequencing
-              - selenium
           - name: galaxy-singularity
             files: -f docker-compose.yml -f docker-compose.singularity.yml
+            env: EXTRA_SKIP_TESTS_BIOBLEND="not test_get_container_resolvers and not test_show_container_resolver"
+          - name: galaxy-pulsar-mq-singularity
+            files: -f docker-compose.yml -f docker-compose.pulsar.yml -f docker-compose.pulsar.mq.yml -f docker-compose.singularity.yml
+            env: EXTRA_SKIP_TESTS_BIOBLEND="not test_wait_for_job and not test_get_container_resolvers and not test_show_container_resolver"
             exclude_test:
-              - bioblend
-              - workflow_ard
-              - workflow_mapping_by_sequencing
-              - selenium
-          # - name: galaxy-pulsar-mq-singularity
-          #   files: -f docker-compose.yml -f docker-compose.pulsar.yml -f docker-compose.pulsar.mq.yml -f docker-compose.singularity.yml
-          #   exclude_test:
-          #     - bioblend
-          #     - workflow_ard
-          #     - workflow_mapping_by_sequencing
-          #     - selenium
+              - workflow_quality_control
           - name: galaxy-slurm-singularity
             files: -f docker-compose.yml -f docker-compose.slurm.yml -f docker-compose.singularity.yml
-            exclude_test:
-              - bioblend
-              - workflow_ard
-              - workflow_mapping_by_sequencing
-              - selenium
+            env: EXTRA_SKIP_TESTS_BIOBLEND="not test_get_container_resolvers and not test_show_container_resolver"
           - name: galaxy-htcondor-singularity
             files: -f docker-compose.yml -f docker-compose.htcondor.yml -f docker-compose.singularity.yml
-            exclude_test:
-              - bioblend
-              - workflow_ard
-              - workflow_mapping_by_sequencing
-              - selenium
+            env: EXTRA_SKIP_TESTS_BIOBLEND="not test_get_container_resolvers and not test_show_container_resolver"
         test:
           - name: bioblend
             files: -f tests/docker-compose.test.yml -f tests/docker-compose.test.bioblend.yml
@@ -208,10 +182,10 @@ jobs:
             workflow: sklearn/ard/ard.ga
             timeout: 60
             second_run: "true"
-          - name: workflow_mapping_by_sequencing
+          - name: workflow_quality_control
             files: -f tests/docker-compose.test.yml -f tests/docker-compose.test.workflows.yml
             exit-from: galaxy-workflow-test
-            workflow: training/variant-analysis/mapping-by-sequencing/mapping_by_sequencing.ga
+            workflow: training/sequence-analysis/quality-control/quality_control.ga
             timeout: 60
           - name: workflow_example1
             files: -f tests/docker-compose.test.yml -f tests/docker-compose.test.workflows.yml
@@ -229,9 +203,9 @@ jobs:
       - name: Check if test should be run
         id: run_check
         if: contains(matrix.infrastructure.exclude_test, matrix.test.name) != true
-        run: echo ::set-output name=run::true
+        run: echo "run=true" >> $GITHUB_OUTPUT
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Set image tag in env
         run: echo "IMAGE_TAG=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
       - name: Master branch - Set image to to 'latest'
@@ -240,6 +214,9 @@ jobs:
       - name: Set WORKFLOWS env for worfklows-test
         if: matrix.test.workflow
         run: echo "WORKFLOWS=${{ matrix.test.workflow }}" >> $GITHUB_ENV
+      - name: Install Docker Compose
+        run: |
+          sudo apt-get update -qq && sudo apt-get install docker-compose -y
       - name: Run tests for the first time
         if: steps.run_check.outputs.run
         run: |
@@ -270,11 +247,15 @@ jobs:
         shell: bash
         working-directory: ./compose
         continue-on-error: false
+      - name: Fix file names before saving artifacts
+        if: failure()
+        run: |
+          sudo find ./compose/export/galaxy/database -depth -name '*:*' -execdir bash -c 'mv "$1" "${1//:/-}"' bash {} \;
       - name: Allow upload-artifact read access
         if: failure()
         run: sudo chmod -R +r ./compose/export/galaxy/database
       - name: Save artifacts for debugging a failed test
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: ${{ matrix.infrastructure.name }}_${{ matrix.test.name }}_first-run
@@ -286,7 +267,7 @@ jobs:
           sudo rm -rf export/galaxy/database
         working-directory: ./compose
       - name: Run tests a second time
-        if: matrix.test.second_run == 'true' && steps.run_check.run
+        if: matrix.test.second_run == 'true' && steps.run_check.outputs.run
         run: |
           export DOCKER_REGISTRY=${{ secrets.docker_registry }}
           export DOCKER_REGISTRY_USERNAME=${{ secrets.docker_registry_username }}
@@ -312,11 +293,15 @@ jobs:
         shell: bash
         working-directory: ./compose
         continue-on-error: false
+      - name: Fix file names before saving artifacts
+        if: failure() && matrix.test.second_run == 'true'
+        run: |
+          sudo find ./compose/export/galaxy/database -depth -name '*:*' -execdir bash -c 'mv "$1" "${1//:/-}"' bash {} \;
       - name: Allow upload-artifact read access
         if: failure() && matrix.test.second_run == 'true'
         run: sudo chmod -R +r ./compose/export/galaxy/database
       - name: Save artifacts for debugging a failed test
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v4
         if: failure() && matrix.test.second_run == 'true'
         with:
           name: ${{ matrix.infrastructure.name }}_${{ matrix.test.name }}_second-run
