--- a/compose/base_config.yml
+++ b/compose/base_config.yml
@@ -1,35 +1,45 @@
-galaxy_uwsgi:
-  socket: :5555
-  buffer-size: 16384
-  processes: 1
-  threads: 4
-  offload-threads: 2
-  static-map: /static=static
-  static-map: /favicon.ico=static/favicon.ico
-  master: false
-  virtualenv: .venv
-  pythonpath: lib
-  thunder-lock: true
-  die-on-term: true
-  hook-master-start: unix_signal:2 gracefully_kill_them_all
-  hook-master-start: unix_signal:15 gracefully_kill_them_all
-  enable-threads: true
+gravity:
+  process_manager: supervisor
+  galaxy_root: /galaxy
+  virtualenv: /galaxy/.venv
+  gunicorn:
+    enable: True
+    bind: 0.0.0.0:5555
+    workers: 2
+  celery:
+    enable: true
+    enable_beat: true
+    concurrency: 2
+  handlers:
+    handler:
+      processes: 2
+      pools:
+        - job-handlers
+        - workflow-schedulers
 
 galaxy:
   tool_dependency_dir: /tool_deps
   tool_data_table_config_path: /cvmfs/data.galaxyproject.org/byhand/location/tool_data_table_conf.xml,/cvmfs/data.galaxyproject.org/managed/location/tool_data_table_conf.xml
+  enable_celery_tasks: true
+  celery_conf:
+    result_backend: redis://redis:6379/0
 
 pulsar:
   conda_auto_init: True
   conda_auto_install: True
   tool_dependency_dir: dependencies
-  dependency_resolvers_config_file: config/dependency_resolvers_conf.xml
+  dependency_resolution:
+    resolvers:
+      - type: conda
+        auto_init: true
+        auto_install: true
+      - type: conda
+        versionless: true
 
 # Probably needs more polishing, but at least it works..
 slurm:
-  ControlMachine: "slurmctld"
+  SlurmctldHost: "slurmctld"
   AuthType: "auth/munge"
-  CacheGroups: "0"
   CryptoType: "crypto/munge"
   MpiDefault: "none"
   ProctrackType: "proctrack/pgid"
@@ -49,13 +59,11 @@ slurm:
   SlurmctldTimeout: "120"
   SlurmdTimeout: "300"
   Waittime: "0"
-  FastSchedule: "1"
   SchedulerType: "sched/backfill"
-  SchedulerPort: "7321"
   SelectType: "select/cons_res"
   SelectTypeParameters: "CR_Core_Memory"
   AccountingStorageType: "accounting_storage/none"
-  AccountingStoreJobComment: "YES"
+  AccountingStoreFlags: "job_comment"
   ClusterName: "Cluster"
   JobCompType: "jobcomp/none"
   JobAcctGatherFrequency: "30"
@@ -70,11 +78,20 @@ htcondor_galaxy:
   ALLOW_READ: "*"
   ALLOW_WRITE: "*"
   ALLOW_CLIENT: "*"
+  ALLOW_DAEMON: "*"
   ALLOW_NEGOTIATOR: "*"
   DAEMON_LIST: "MASTER, SCHEDD"
   UID_DOMAIN: "galaxy"
   DISCARD_SESSION_KEYRING_ON_STARTUP: "False"
   TRUST_UID_DOMAIN: "true"
+  SEC_PASSWORD_FILE: "/var/lib/condor/pool_password"
+  SEC_DAEMON_AUTHENTICATION: "REQUIRED"
+  SEC_DAEMON_INTEGRITY: "REQUIRED"
+  SEC_DAEMON_AUTHENTICATION_METHODS: "PASSWORD"
+  SEC_NEGOTIATOR_AUTHENTICATION: "REQUIRED"
+  SEC_NEGOTIATOR_INTEGRITY: "REQUIRED"
+  SEC_NEGOTIATOR_AUTHENTICATION_METHODS: "PASSWORD"
+  SEC_CLIENT_AUTHENTICATION_METHODS: "FS, PASSWORD"
 
 htcondor_master:
   BASE_CGROUP: ""
@@ -93,9 +110,18 @@ htcondor_master:
   ALLOW_READ_COLLECTOR: "*"
   ALLOW_READ_STARTD: "*"
   ALLOW_CLIENT: "*"
+  ALLOW_DAEMON: "*"
   DOCKER_IMAGE_CACHE_SIZE: "20"
   UID_DOMAIN: "galaxy"
   TRUST_UID_DOMAIN: "TRUE"
+  SEC_PASSWORD_FILE: "/var/lib/condor/pool_password"
+  SEC_DAEMON_AUTHENTICATION: "REQUIRED"
+  SEC_DAEMON_INTEGRITY: "REQUIRED"
+  SEC_DAEMON_AUTHENTICATION_METHODS: "PASSWORD"
+  SEC_NEGOTIATOR_AUTHENTICATION: "REQUIRED"
+  SEC_NEGOTIATOR_INTEGRITY: "REQUIRED"
+  SEC_NEGOTIATOR_AUTHENTICATION_METHODS: "PASSWORD"
+  SEC_CLIENT_AUTHENTICATION_METHODS: "FS, PASSWORD"
 
 htcondor_executor:
   CONDOR_HOST: "htcondor-master"
@@ -110,6 +136,7 @@ htcondor_executor:
   ALLOW_READ: "*"
   ALLOW_WRITE: "*"
   ALLOW_CLIENT: "*"
+  ALLOW_DAEMON: "*"
   ALLOW_NEGOTIATOR_SCHEDD: "*"
   ALLOW_WRITE_COLLECTOR: "*"
   ALLOW_WRITE_STARTD: "*"
@@ -117,3 +144,11 @@ htcondor_executor:
   ALLOW_READ_STARTD: "*"
   UID_DOMAIN: "galaxy"
   SCHED_NAME: "htcondor-master"
+  SEC_PASSWORD_FILE: "/var/lib/condor/pool_password"
+  SEC_DAEMON_AUTHENTICATION: "REQUIRED"
+  SEC_DAEMON_INTEGRITY: "REQUIRED"
+  SEC_DAEMON_AUTHENTICATION_METHODS: "PASSWORD"
+  SEC_NEGOTIATOR_AUTHENTICATION: "REQUIRED"
+  SEC_NEGOTIATOR_INTEGRITY: "REQUIRED"
+  SEC_NEGOTIATOR_AUTHENTICATION_METHODS: "PASSWORD"
+  SEC_CLIENT_AUTHENTICATION_METHODS: "FS, PASSWORD"
