--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.7"
 services:
   galaxy-server:
     image: ${DOCKER_REGISTRY:-quay.io}/${DOCKER_REGISTRY_USERNAME:-bgruening}/galaxy-server:${IMAGE_TAG:-latest}
@@ -8,10 +7,9 @@ services:
       - GALAXY_DEFAULT_ADMIN_EMAIL=admin@galaxy.org
       - GALAXY_DEFAULT_ADMIN_PASSWORD=password
       - GALAXY_DEFAULT_ADMIN_KEY=fakekey
+      - HTCONDOR_POOL_PASSWORD=123456789changeme
     hostname: galaxy-server
     privileged: True
-    ports:
-      - 5555:5555
     volumes:
       # This is the directory where all your files from Galaxy will be stored
       # on your host system
@@ -20,6 +18,7 @@ services:
     depends_on:
       - postgres
       - rabbitmq
+      - redis
     networks:
       - galaxy
   # The galaxy-configurator is responsible for the whole configuration of
@@ -48,7 +47,7 @@ services:
       - ./galaxy-configurator/templates:/templates
   # The database for Galaxy
   postgres:
-    image: postgres:12
+    image: postgres:15
     hostname: postgres
     environment:
       - POSTGRES_PASSWORD=chaopagoosaequuashie
@@ -85,6 +84,15 @@ services:
       - RABBITMQ_DEFAULT_VHOST=galaxy
     volumes:
       - ${EXPORT_DIR:-./export}/rabbitmq:/var/lib/rabbitmq:delegated
+    networks:
+      - galaxy
+  # Backend for Celery
+  redis:
+    image: redis:alpine
+    container_name: galaxy-redis
+    hostname: redis
+    volumes:
+      - ${EXPORT_DIR:-./export}/redis:/data:delegated
     networks:
       - galaxy
 networks:
