--- a/compose/galaxy-slurm/Dockerfile
+++ b/compose/galaxy-slurm/Dockerfile
@@ -2,21 +2,21 @@ ARG DOCKER_REGISTRY=quay.io
 ARG DOCKER_REGISTRY_USERNAME=bgruening
 ARG IMAGE_TAG=latest
 
-FROM buildpack-deps:20.04 as galaxy_dependencies
+FROM buildpack-deps:22.04 as galaxy_dependencies
 
-ARG GALAXY_RELEASE=release_20.09
+ARG GALAXY_RELEASE=release_24.1
 ARG GALAXY_REPO=https://github.com/galaxyproject/galaxy
 
-ENV GALAXY_ROOT=/galaxy
+ENV GALAXY_ROOT_DIR=/galaxy
 
 # Download Galaxy source, but only keep necessary dependencies
-RUN mkdir "${GALAXY_ROOT}" \
-    && curl -L -s $GALAXY_REPO/archive/$GALAXY_RELEASE.tar.gz | tar xzf - --strip-components=1 -C $GALAXY_ROOT \
-    && cd $GALAXY_ROOT \
+RUN mkdir "${GALAXY_ROOT_DIR}" \
+    && curl -L -s $GALAXY_REPO/archive/$GALAXY_RELEASE.tar.gz | tar xzf - --strip-components=1 -C $GALAXY_ROOT_DIR \
+    && cd $GALAXY_ROOT_DIR \
     && ls . | grep -v "lib" | xargs rm -rf \
-    && cd $GALAXY_ROOT/lib \
+    && cd $GALAXY_ROOT_DIR/lib \
     && ls . | grep -v "galaxy\|galaxy_ext" | xargs rm -rf \
-    && cd $GALAXY_ROOT/lib/galaxy \
+    && cd $GALAXY_ROOT_DIR/lib/galaxy \
     && ls . | grep -v "__init__.py\|datatypes\|exceptions\|files\|metadata\|model\|util\|security" | xargs rm -rf
 
 
@@ -27,7 +27,7 @@ ENV GALAXY_USER=galaxy \
     GALAXY_UID=1450 \
     GALAXY_GID=1450 \
     GALAXY_HOME=/home/galaxy \
-    GALAXY_ROOT=/galaxy
+    GALAXY_ROOT_DIR=/galaxy
 
 RUN groupadd -r $GALAXY_USER -g $GALAXY_GID \
     && useradd -u $GALAXY_UID -r -g $GALAXY_USER -d $GALAXY_HOME -c "Galaxy user" --shell /bin/bash $GALAXY_USER \
@@ -38,20 +38,20 @@ RUN groupadd -r $GALAXY_USER -g $GALAXY_GID \
 ENV SLURM_USER=galaxy \
     SLURM_UID=1450 \
     SLURM_GID=1450 \
-    MUNGER_USER=munge \
+    MUNGE_USER=munge \
     MUNGE_UID=1200 \
     MUNGE_GID=1200
 
-RUN groupadd -r $MUNGER_USER -g $MUNGE_GID \
-    && useradd -u $MUNGE_UID -r -g $MUNGER_USER $MUNGER_USER \
+RUN groupadd -r $MUNGE_USER -g $MUNGE_GID \
+    && useradd -u $MUNGE_UID -r -g $MUNGE_USER $MUNGE_USER \
     && apt update \
     && apt install --no-install-recommends gosu munge python3 python3-dev slurm-wlm -y \
     && rm -rf /var/lib/apt/lists/* && rm -rf /var/cache/* && find / -name '*.pyc' -delete
 
 # Copy Galaxy dependencies
-COPY --chown=$GALAXY_USER:$GALAXY_USER --from=galaxy_dependencies $GALAXY_ROOT $GALAXY_ROOT
+COPY --chown=$GALAXY_USER:$GALAXY_USER --from=galaxy_dependencies $GALAXY_ROOT_DIR $GALAXY_ROOT_DIR
 # Make Python3 standard
-RUN update-alternatives --install /usr/bin/python python /usr/bin/python3 9 
+RUN update-alternatives --install /usr/bin/python python /usr/bin/python3 10
 
 COPY start.sh /usr/bin/start.sh
 
