--- a/compose/tests/docker-compose.test.bioblend.yml
+++ b/compose/tests/docker-compose.test.bioblend.yml
@@ -1,10 +1,10 @@
-version: "3.7"
 services:
   galaxy-bioblend-test:
     image: ${DOCKER_REGISTRY:-quay.io}/${DOCKER_REGISTRY_USERNAME:-bgruening}/galaxy-bioblend-test:${IMAGE_TAG:-latest}
     build: tests/galaxy-bioblend-test
     environment:
-      - GALAXY_VERSION=${GALAXY_VERSION:-release_20.09} # TODO: Change to GALAXY_RELEASE
-      - GALAXY_URL=http://nginx${GALAXY_PROXY_PREFIX:-}/
+      - GALAXY_VERSION=${GALAXY_VERSION:-release_24.1} # TODO: Change to GALAXY_RELEASE
+      - GALAXY_URL=http://nginx${GALAXY_PROXY_PREFIX:-}
+      - EXTRA_SKIP_TESTS_BIOBLEND=${EXTRA_SKIP_TESTS_BIOBLEND:-}
     networks:
       - galaxy
