--- a/compose/tests/docker-compose.test.selenium.yml
+++ b/compose/tests/docker-compose.test.selenium.yml
@@ -1,11 +1,12 @@
-version: "3.7"
 services:
   galaxy-selenium-test:
     image: ${DOCKER_REGISTRY:-quay.io}/${DOCKER_REGISTRY_USERNAME:-bgruening}/galaxy-selenium-test:${IMAGE_TAG:-latest}
     build: tests/galaxy-selenium-test
     environment:
       - TESTS=${TESTS:-navigates_galaxy.py,login.py}
-      - GALAXY_URL=http://nginx${GALAXY_PROXY_PREFIX:-}/
+      - GALAXY_URL=http://nginx${GALAXY_PROXY_PREFIX:-}
+      - SE_ENABLE_TRACING=false
+      - SE_SESSION_REQUEST_TIMEOUT=1800
     volumes:
       - ${EXPORT_DIR:-./../export}/galaxy/database:/galaxy/database
     networks:
