--- a/compose/tests/galaxy-bioblend-test/Dockerfile
+++ b/compose/tests/galaxy-bioblend-test/Dockerfile
@@ -1,10 +1,11 @@
-FROM alpine:3.11 as build
+FROM alpine:3.17 as build
 
-ENV BIOBLEND_VERSION=0.13.0
+ENV BIOBLEND_VERSION=1.3.0
 
 ADD "https://github.com/galaxyproject/bioblend/archive/v$BIOBLEND_VERSION.zip" /src/bioblend.zip
 RUN apk update && apk add curl python3-dev unzip \
-    && pip3 install pep8 tox \
+    && python3 -m ensurepip --upgrade \
+    && pip3 install pep8 tox "aiohttp==3.10.9" \
     && cd /src \
     && unzip bioblend.zip && rm bioblend.zip \
     && mv "bioblend-$BIOBLEND_VERSION" bioblend \
@@ -13,7 +14,7 @@ RUN apk update && apk add curl python3-dev unzip \
 
 WORKDIR /src/bioblend
 
-RUN tox -e py38 --notest
+RUN tox -e py310 --notest
 
 COPY ./run.sh /src/bioblend/run.sh
 
