--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -2,6 +2,7 @@ name: pr-test
 on: pull_request
 jobs:
   test:
+    if: false  # Temporarily disable workflow 
     runs-on: ubuntu-20.04
     strategy:
       matrix:
